terraform/product/modules/bootstrap/01-backend/client-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer1-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: customer1-webapp
  type: ClusterIP
